荒技に理由を

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 <!-- access -->
                 <section class="p-access c-bg">  <!-- 背景：map画像 -->
                     <div class="p-access__map-layer">  <!-- 背景：mapを覆う透過の黒 -->
-                        <div class="p-access__bg-layer">  <!-- 背景：透過の黒 -->
-                            <div class="p-access__wrapper">
+                        <div class="p-access__contents-area">  <!-- コンテンツ領域：色なし -->
+                            <div class="p-access__wrapper">  <!-- コンテンツラップ：色なし -->
                                 <h2 class="p-access__title c-text__ttl--ja">見出しが入ります</h2>
                                 <p class="p-access__line c-line"></p>
                                 <p class="p-access__text c-text--ja">
@@ -115,7 +115,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="p-access__bg-layer2"></div>  <!-- spサイズの背景：透過の黒 -->
+                        <div class="p-access__bg-layer"></div>  <!-- 背景：透過の黒 -->
                     </div>
                 </section><!-- ここまでaccess -->
             </article><!-- ここまでcontents -->
