アーカイブ作成

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- contents -->
             <article class="l-grid__item2 p-contents">
                 <!-- mainvisual -->
-                <div class="p-mainvisual p-mainvisual__bg c-bg">
+                <div class="p-mainvisual c-bg">
                     <h2 class="p-mainvisual__title c-text__ttl--ja">ダミーサイト</h2>
                 </div><!-- ここまでmainvisual -->
 
