--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
                 <!-- food-menu -->
                 <div class="p-food-menu">
                     <ul class="p-food-menu__ul">
-                        <li class="p-food-menu__li c-bg"><a href="#">
+                        <li class="p-food-menu__li c-bg">
                             <div class="p-food-menu__head">
                                 <h2 class="p-food-menu__title c-text__ttl--e">Take Out</h2>
                                 <p class="p-food-menu__line c-line"></p>
+                                <a href="#" class="p-food-menu__link"></a>
                             </div>
                             <div class="p-food-menu__bottom">
                                 <dl class="p-food-menu__dl c-bg--white">
@@ -65,11 +66,12 @@
                                     </dd>
                                 </dl>
                             </div>
-                        </a></li>
-                        <li class="p-food-menu__li c-bg"><a href="#">
+                        </li>
+                        <li class="p-food-menu__li c-bg">
                             <div class="p-food-menu__head">
                                 <h2 class="p-food-menu__title c-text__ttl--e">Eat In</h2>
                                 <p class="p-food-menu__line c-line"></p>
+                                <a href="#" class="p-food-menu__link"></a>
                             </div>
                             <div class="p-food-menu__bottom">
                                 <dl class="p-food-menu__dl c-bg--white">
@@ -89,7 +91,7 @@
                                     </dd>
                                 </dl>
                             </div>
-                        </a></li>
+                        </li>
                     </ul>
                 </div><!-- ここまでfood-menu -->
 
