--- a/single.html
+++ b/single.html
@@ -66,9 +66,53 @@
                             引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
                             引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
                             引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ<br><br><br>
-                            出典元： <a href="#">○○○○○○○○○○○○</a>
+                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                            <br><br><br>
+                            出典元： <cite><a href="#">○○○○○○○○○○○○</a></cite>
                         </blockquote>
+                        <img src="img/cooked-foods-big.jpg" alt="写真大" class="big">
+                        <div class="flex-row">
+                            <img src="img/cooked-foods-mid.png" alt="写真中" class="medium">
+                            <p class="flex-row text-right">
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります
+                            </p>
+                        </div>
+                        <div class="flex-row">
+                            <p class="flex-row text-left">
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります テキストが入ります テキストが入ります 
+                                テキストが入ります テキストが入ります
+                            </p>
+                            <img src="img/cooked-foods-mid.png" alt="写真中" class="medium">
+                        </div>
+                        <img src="img/cooked-foods-mid.png" alt="写真中" class="center medium">
+                        <div class="flex-row flex-wrap">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                            <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
+                        </div>
                     </section><!-- ここまで記事本文 -->
                 </div><!-- ここまでcontainer -->
             </article><!-- ここまでcontents -->
