--- a/single.html
+++ b/single.html
@@ -113,6 +113,44 @@
                             <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
                             <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
                         </div>
+                        <ol class="outside decimal">
+                            <li>リストリストリスト</li>
+                            <li>リストリストリスト</li>
+                        </ol>
+                        <ol class="inside decimal">
+                            <li>リスト2リスト2リスト2</li>
+                            <li>リスト2リスト2リスト2</li>
+                        </ol>
+                        <ol class="outside decimal">
+                            <li>リストリストリスト</li>
+                            <li>リストリストリスト</li>
+                        </ol>
+                        <br><br>
+                        <ol class="outside-none">
+                            <li>リストリストリスト</li>
+                            <li>リストリストリスト</li>
+                        </ol>
+                        <ol class="inside-none">
+                            <li>リスト2リスト2リスト2</li>
+                            <li>リスト2リスト2リスト2</li>
+                        </ol>
+                        <ol class="outside-none">
+                            <li>リストリストリスト</li>
+                            <li>リストリストリスト</li>
+                        </ol>
+                        <br>
+                        <code>
+                            <pre>&lt;html&gt;<br>    &lt;head&gt;<br>    &lt;/head&gt;<br>    &lt;body&gt;<br>    &lt;/body&gt;<br>&lt;/html&gt;</pre>
+                        </code>
+                        <table>
+                            <tr><td class="td_left">テーブル</td><td class="td_right">テーブル</td></tr>
+                            <tr><td class="td_left">テーブル</td><td class="td_right">テーブル</td></tr>
+                            <tr><td class="td_left">テーブル</td><td class="td_right">テーブル</td></tr>
+                            <tr><td class="td_left">テーブル</td><td class="td_right">テーブル</td></tr>
+                        </table>
+                        <input  type="submit" value="ボタン" class="p-article__button c-form__button">
+                        <p class="c-text--e"><b>boldboldboldboldboldboldbold</b></p>
+                        <br><br><br><br><br><br><br><br><br>
                     </section><!-- ここまで記事本文 -->
                 </div><!-- ここまでcontainer -->
             </article><!-- ここまでcontents -->
