--- a/single.html
+++ b/single.html
@@ -40,7 +40,7 @@
                 </div><!-- ここまでtitlevisual -->
 
                 <!-- container -->
-                <div class="c-container"> <!-- コンテンツ領域用 -->
+                <div class="p-article__container c-container"> <!-- コンテンツ領域用 -->
                     <!-- 記事本文 -->
                     <section class="p-article">
                         <h2>見出しh2</h2>
@@ -56,19 +56,20 @@
                         <h5>見出しh5</h5>
                         <h6>見出しh6</h6>
                         <blockquote>
-                            Blockquote 引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
-                            <br><br><br>
-                            出典元： <cite><a href="#">○○○○○○○○○○○○</a></cite>
+                            <p>
+                                Blockquote 引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                                引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ引用タグ
+                            </p>
+                            <cite>出典元：<a href="#">○○○○○○○○○○○○</a></cite>
                         </blockquote>
                         <img src="img/cooked-foods-big.jpg" alt="写真大" class="big">
                         <div class="flex-row">
@@ -113,32 +114,32 @@
                             <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
                             <img src="img/cooked-foods-small.jpg" alt="写真小" class="small">
                         </div>
-                        <ol class="outside decimal">
+                        <ol class="first decimal">
                             <li>リストリストリスト</li>
                             <li>リストリストリスト</li>
                         </ol>
-                        <ol class="inside decimal">
+                        <ol class="second decimal">
                             <li>リスト2リスト2リスト2</li>
                             <li>リスト2リスト2リスト2</li>
                         </ol>
-                        <ol class="outside decimal">
+                        <ol class="first decimal">
                             <li>リストリストリスト</li>
                             <li>リストリストリスト</li>
                         </ol>
                         <br><br>
-                        <ol class="outside-none">
+                        <ul class="first">
                             <li>リストリストリスト</li>
                             <li>リストリストリスト</li>
-                        </ol>
-                        <ol class="inside-none">
+                        </ul>
+                        <ul class="second">
                             <li>リスト2リスト2リスト2</li>
                             <li>リスト2リスト2リスト2</li>
-                        </ol>
-                        <ol class="outside-none">
+                        </ul>
+                        <ul class="first">
                             <li>リストリストリスト</li>
                             <li>リストリストリスト</li>
-                        </ol>
-                        <br>
+                        </ul>
+                        <br><br>
                         <code>
                             <pre>&lt;html&gt;<br>    &lt;head&gt;<br>    &lt;/head&gt;<br>    &lt;body&gt;<br>    &lt;/body&gt;<br>&lt;/html&gt;</pre>
                         </code>
